# ae-rlhf

./: Makefile  README.md  asgi.py  pyproject.toml
ae_rlhf/: config.py  modeling.py  train_reward.py  utils.py
ae_rlhf/app/: app.py  crud.py  database.py  dev.db  models.py  prod.db  routes.py  ui.py
ae_rlhf/app/templates/: feedback.html  feedback_main.html  index.html
examples/atari/: collect_pretrain_data.py  make_env.py  modeling.py  pretrain_reward_model.py  train_ppo_agent.py
examples/cartpole/: make_env.py  modeling.py  train_ppo_agent.py
scripts/: copy_pretrain_data.py
tests/: conftest.py
tests/hf_atari/: test_config.py  test_utils.py
tests/hf_atari/app/: test_crud.py
