[tool.poetry]
name = "hf-atari"
version = "0.1.0"
description = ""
authors = ["Mike Vaiana <mikevaiana@gmail.com>"]
readme = "README.md"
packages = [{include = "ae_rlhf"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
sqlmodel = "^0.0.14"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
jinja2 = "^3.1.3"
gymnasium = {extras = ["accept-rom-license", "atari", "classic-control"], version = "^0.29.1"}
stable-baselines3 = "^2.2.1"
opencv-python = "^4.9.0.80"
numpy = "^1.26.3"
torch = "^2.1.2"
tyro = "^0.6.4"
tensorboard = "^2.15.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
black = "^23.12.1"
types-requests = "^2.31.0.20240106"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.mypy]
plugins = ["pydantic.mypy"]
